force-app/main/default/objects/Contract/fields/Amendment_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Link_1__c</fullName>
    <label>Amendment Link #1</label>
    <type>Url</type>
</CustomField>