force-app/main/default/objects/Contract/fields/Amendment_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Link_2__c</fullName>
    <label>Amendment Link #2</label>
    <type>Url</type>
</CustomField>