force-app/main/default/objects/Contract/fields/Amendment_Link_3__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Link_3__c</fullName>
    <label>Amendment Link #3</label>
    <type>Url</type>
</CustomField>