force-app/main/default/objects/Contract/fields/Breeding_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Breeding_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Breeding Restrictions?</label>
    <type>Checkbox</type>
</CustomField>