force-app/main/default/objects/Contract/fields/Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Reason__c</fullName>
    <label>Cancelation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deprioritized</fullName>
            </value>
            <value>
                <fullName>Canceled w/ outstanding payment</fullName>
            </value>
            <value>
                <fullName>Contracting challenges</fullName>
            </value>
            <value>
                <fullName>No longer needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>