force-app/main/default/objects/Contract/fields/Contract_Term_years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_years__c</fullName>
    <description>Contract years, used in flow to stamp standard SF field Contract Term (months) to calculate the end date automatically.</description>
    <label>Contract Term (years)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>