force-app/main/default/objects/Contract/fields/Days_from_Start_to_End_Legal__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Start_to_End_Legal__c</fullName>
    <description>Days from start to End with Legal (Status field)</description>
    <label>Days from Start to End Legal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>