force-app/main/default/objects/Contract/fields/Days_from_Start_to_End_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Start_to_End_Procurement__c</fullName>
    <label>Days from Start to End Procurement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>