force-app/main/default/objects/Contract/fields/Days_in_Contract_Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Contract_Initial_Payment__c</fullName>
    <label>Days in Contract Initial Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>