force-app/main/default/objects/Contract/fields/Days_in_iCertis_Entry__c.field-meta.xml
<CustomField>
    <fullName>Days_in_iCertis_Entry__c</fullName>
    <description>Days contract has been sitting in the iCertis Entry status</description>
    <label>Days in iCertis Entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>