force-app/main/default/objects/Contract/fields/Days_in_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Legal_Review__c</fullName>
    <description>Days the contract has been sitting with Legal</description>
    <label>Days in Legal Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>