force-app/main/default/objects/Contract/fields/Days_in_Vendor_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Vendor_Onboarding__c</fullName>
    <description>Days contract has been sitting in Vendor Onboarding</description>
    <label>Days in Vendor Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>