force-app/main/default/objects/Contract/fields/Days_Waiting_for_PO__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiting_for_PO__c</fullName>
    <description>Days contract has been sitting in the PO # sub status</description>
    <label>Days Waiting for PO #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>