force-app/main/default/objects/Contract/fields/Days_Waiting_for_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiting_for_Requisition__c</fullName>
    <description>Number of days the contract has been sitting in Requisition # sub status</description>
    <label>Days Waiting for Requisition #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>