force-app/main/default/objects/Contract/fields/Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Due_Date__c</fullName>
    <description>Recurring date</description>
    <inlineHelpText>Recurring Fee Date</inlineHelpText>
    <label>Fee Due Date</label>
    <type>Date</type>
</CustomField>