force-app/main/default/objects/Contract/fields/Fee_Due_Year__c.field-meta.xml
<CustomField>
    <fullName>Fee_Due_Year__c</fullName>
    <formula>TEXT(YEAR(Fee_Due_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Due Year</label>
    <type>Text</type>
</CustomField>