force-app/main/default/objects/Contract/fields/iCertis_Contract_link__c.field-meta.xml
<CustomField>
    <fullName>iCertis_Contract_link__c</fullName>
    <label>iCertis Contract Link</label>
    <type>Url</type>
</CustomField>