force-app/main/default/objects/Contract/fields/iCertis_Contract_Num__c.field-meta.xml
<CustomField>
    <fullName>iCertis_Contract_Num__c</fullName>
    <label>iCertis Contract #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>