force-app/main/default/objects/Contract/fields/Initial_Contract_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_Fee__c</fullName>
    <label>Initial Contract Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>