force-app/main/default/objects/Contract/fields/Initial_Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee_Due_Date__c</fullName>
    <description>This is the Initial Fee Due Date that will be available for end user input.</description>
    <label>Initial Fee Due Date</label>
    <type>Date</type>
</CustomField>