force-app/main/default/objects/Contract/fields/Initial_Fee_Due_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee_Due_Date_Year__c</fullName>
    <formula>TEXT(YEAR(Initial_Fee_Due_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Fee Due Date Year</label>
    <type>Text</type>
</CustomField>