force-app/main/default/objects/Contract/fields/IP_Associated__c.field-meta.xml
<CustomField>
    <fullName>IP_Associated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Associated?</label>
    <type>Checkbox</type>
</CustomField>