force-app/main/default/objects/Contract/fields/Oracle_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Purchase_Order__c</fullName>
    <label>Oracle Purchase Order #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>