force-app/main/default/objects/Contract/fields/Oracle_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Requisition__c</fullName>
    <label>Oracle Requisition #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>