force-app/main/default/objects/Contract/fields/Perpetual_Contract__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perpetual Contract</label>
    <type>Checkbox</type>
</CustomField>