force-app/main/default/objects/Contract/fields/Qliksense_Link_to_PO__c.field-meta.xml
<CustomField>
    <fullName>Qliksense_Link_to_PO__c</fullName>
    <label>Qliksense Link to PO</label>
    <type>Url</type>
</CustomField>