force-app/main/default/objects/Contract/fields/Remit_Address_Checked__c.field-meta.xml
<CustomField>
    <fullName>Remit_Address_Checked__c</fullName>
    <label>Remit Address Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>