force-app/main/default/objects/Contract/fields/Royalties_Associated__c.field-meta.xml
<CustomField>
    <fullName>Royalties_Associated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Royalties Associated?</label>
    <type>Checkbox</type>
</CustomField>