force-app/main/default/objects/Contract/fields/Royalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Amount__c</fullName>
    <label>Royalty Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>