force-app/main/default/objects/Contract/fields/Sharing_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sharing Restrictions?</label>
    <type>Checkbox</type>
</CustomField>