force-app/main/default/objects/Contract/fields/Status_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Start_Date__c</fullName>
    <description>Stamped by a flow when Status changes</description>
    <label>Status Start Date</label>
    <type>Date</type>
</CustomField>