force-app/main/default/objects/Contract/fields/Total_Annual_Initial_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Initial_Fees__c</fullName>
    <formula>(Annual_Contract_Fee__c *  Contract_Term_years__c ) +  Initial_Contract_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual + Initial Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>