force-app/main/default/objects/Contract/fields/Year_new_PO_Needed__c.field-meta.xml
<CustomField>
    <fullName>Year_new_PO_Needed__c</fullName>
    <label>Year new PO is needed</label>
    <length>4</length>
    <type>Text</type>
</CustomField>