force-app/main/default/objects/Contract/listViews/All_Active_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Active_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>iCertis_Contract_link__c</columns>
    <columns>Annual_Contract_Fee__c</columns>
    <columns>Initial_Contract_Fee__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>PO_Amount__c</columns>
    <columns>Fee_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>All Active Contracts</label>
</ListView>