force-app/main/default/objects/Contract/listViews/All_Canceled_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Canceled_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>All Canceled Contracts</label>
</ListView>