force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>Annual_Contract_Fee__c</columns>
    <columns>Initial_Contract_Fee__c</columns>
    <columns>iCertis_Contract_link__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>