force-app/main/default/objects/Contract/listViews/Contract_Fees_Due_This_Month.listView-meta.xml
<ListView>
    <fullName>Contract_Fees_Due_This_Month</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Annual_Contract_Fee__c</columns>
    <columns>Fee_Due_Date__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fee_Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Contract Fees Due This Month</label>
</ListView>