force-app/main/default/objects/Contract/listViews/Contracts_Expiring_This_Month.listView-meta.xml
<ListView>
    <fullName>Contracts_Expiring_This_Month</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Contracts Expiring This Month</label>
</ListView>